fixed input focus padding shift

--- a/src/components/input/_input.scss
+++ b/src/components/input/_input.scss
@@ -33,9 +33,9 @@
   }
 
   &:focus {
-    outline: none;
+    outline: 1px solid $color-input;
+    outline-offset: -2px;
     box-shadow: 0 0 0 3px $color-focus;
-    border: 2px solid $color-input;
   }
 }
 
